Setup for shared viewmodels working android side

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ kotlin.native.disableCompilerDaemon=true
 #Github Credentials
 gpr.user=alec-dipasquale
 gpr.token=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
+
+org.gradle.java.home=/usr/local/Cellar/openjdk@11/11.0.23
