--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ composeMaterial = "1.3.1"
 [libraries]
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinTest" }
+koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinTest" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinTest" }
 koin-test = { module = "io.insert-koin:koin-test", version.ref = "koinTest" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlinGradlePlugin" }
