--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,9 @@
 [versions]
 agp = "8.5.0"
+compose-calendar = "2.6.0"
 koinTest = "3.2.0"
 kotlin = "2.0.0"
-kotlinGradlePlugin = "2.0.0"
+kotlinGradlePlugin = "2.6.0"
 serializer = "1.3.0"
 compose = "1.5.4"
 compose-material3 = "1.1.2"
@@ -20,6 +21,7 @@ composeMaterial = "1.3.1"
 
 [libraries]
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
+kizit-calendar = { module = "com.kizitonwose.calendar:compose", version.ref = "compose-calendar" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinTest" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinTest" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinTest" }
